--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -309,6 +309,21 @@
         <div class="col-lg-3 col-sm-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="/assets/img/profilepic/sabriprofilepic.png" class="img-fluid"
+                  alt="Sabri profilepic"></div>
+              <div class="member-info">
+                <h4>Sabri Hamza</h4><span>Lead Teacher</span>
+                <div class="social">
+                  <a target="_blank" href="mailto:sabrih146@gmail.com"><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-3 col-sm-6 ">
+          <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/eamonprofilepic.png" class="img-fluid"
                   alt="Eamon profilepic"></div>
               <div class="member-info">
@@ -316,21 +331,6 @@
                 <div class="social">
                   <a target="_blank" href="mailto:eamonmukhopadhyay@gmail.com"><i class="fa fa-envelope"></i></a>
                   <a target="_blank" href="https://github.com/EamonMukhopadhyayGH"><i class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 ">
-          <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="/assets/img/profilepic/estrellaprofilepic.jpeg" class="img-fluid"
-                  alt="Eamon profilepic"></div>
-              <div class="member-info">
-                <h4>Estrella Popoca</h4><span>Lead Teacher</span>
-                <div class="social">
-                  <a target="_blank" href="mailto:elliepopoca@gmail.com"><i class="fa fa-envelope"></i></a>
                 </div>
               </div>
             </div>
