--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -193,7 +193,7 @@
             <div class="cell" data-title="Starts">June 5<sup>th</sup>, 2021</div>
             <div class="cell" data-title="Ends">August 28<sup>th</sup>, 2021</div>
             <div class="cell" data-title="Duration">14 Weeks</div>
-            <div class="cell" data-title="Time (EST)">10:00 - 11:00 AM</div>
+            <div class="cell" data-title="Time (EST)">1:00 - 2:00 PM</div>
             <div class="cell" data-title="Lead Teachers">Sabri Hamza</div>
             <!--<div class="cell" data-title="Register">
               <a target="_blank" href="https://forms.gle/PiRGjL44YJm3yfuq8">
