--- a/courses.html
+++ b/courses.html
@@ -247,6 +247,7 @@
         <div class="coursegriditem javascript">
           <div class="member">
             <div class="pic">
+              <div class="coursetagYellow">New!</div>
               <img src="assets/img/courseimg/javascriptcourse.svg" class="img-fluid" style="margin-bottom:20%;"
                 alt="Javascript course image">
             </div>
@@ -308,7 +309,8 @@
         <div class="coursegriditem accepting cplusplus">
           <div class="member">
             <div class="pic">
-              <img src="assets/img/courseimg/placeholder.png" class="img-fluid" style="margin-bottom:20%;"
+              <div class="coursetagYellow">New!</div>
+              <img src="assets/img/courseimg/cpluspluscourse.jpg" class="img-fluid" style="margin-bottom:20%;"
                 alt="C++ course image">
             </div>
             <div class="member-info">
