--- a/courses.html
+++ b/courses.html
@@ -159,8 +159,7 @@
 
         <div class="coursegriditem webdev">
           <div class="member">
-            <div class="pic"><img src="assets/img/courseimg/htmlcssclasspic.jpg" class="img-fluid"
-                style="margin-bottom:20%;" alt="Web Development Image"></div>
+            <div class="pic"><img src="assets/img/courseimg/htmlcssclasspic.jpg" class="img-fluid" style="margin-bottom:20%" alt="Web Development Image"></div>
             <div class="member-info">
               <h4>Introduction to Web Development and Design</h4>
               <div class="social">
