--- a/courses.html
+++ b/courses.html
@@ -142,8 +142,8 @@
           <but class="profilebutton" onclick="filterSelection('accepting')">Accepting Students</but>
           <but class="profilebutton" onclick="filterSelection('webdev')"> Web Development</but>
           <but class="profilebutton" onclick="filterSelection('scratch')"> Scratch</but>
-          <but class="profilebutton" onclick="filterSelection('python')"> Python</but>
           <but class="profilebutton" onclick="filterSelection('javascript')">JavaScript</but>
+          <but class="profilebutton" onclick="filterSelection('python')"> Python</but>
           <but class="profilebutton" onclick="filterSelection('rust')"> Rust</but>
           <but class="profilebutton" onclick="filterSelection('Java')"> Java</but>
           <but class="profilebutton" onclick="filterSelection('cplusplus')"> C++</but>
@@ -180,6 +180,21 @@
               <h4>Scratch: A Basic Introduction to Programming</h4>
               <div class="social">
                 <a href="courses/scratch.html"><button class="button button1">Learn More</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="coursegriditem javascript">
+          <div class="member">
+            <div class="pic">
+              <div class="coursetagYellow">New!</div>
+              <img src="assets/img/courseimg/javascriptcourse.svg" class="img-fluid" style="margin-bottom:20%;"
+                alt="Javascript course image">
+            </div>
+            <div class="member-info">
+              <h4>Introduction to JavaScript</h4>
+              <div class="social">
+                <a href="courses/jsintro.html"><button class="button button1">Learn More</button></a>
               </div>
             </div>
           </div>
@@ -243,21 +258,7 @@
           </div>
         </div>
 
-        <div class="coursegriditem javascript">
-          <div class="member">
-            <div class="pic">
-              <div class="coursetagYellow">New!</div>
-              <img src="assets/img/courseimg/javascriptcourse.svg" class="img-fluid" style="margin-bottom:20%;"
-                alt="Javascript course image">
-            </div>
-            <div class="member-info">
-              <h4>Introduction to JavaScript</h4>
-              <div class="social">
-                <a href="courses/jsintro.html"><button class="button button1">Learn More</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
+       
         <div class="coursegriditem rust">
           <div class="member">
             <div class="pic">
@@ -321,7 +322,7 @@
           </div>
         </div>
 
-        <div class="coursegriditem Go">
+        <!--<div class="coursegriditem Go">
           <div class="member">
             <div class="pic">
               <div class="coursetagGreen">Coming Soon!</div>
@@ -335,7 +336,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
         <div class="coursegriditem gamedev">
           <div class="member">
