--- a/courses/cplusplusintro.html
+++ b/courses/cplusplusintro.html
@@ -129,7 +129,7 @@
       <li class="w3-padding-16">Time (EST): 5:00-6:00 PM</li>
       <li class="w3-padding-16">Lead Teacher: Zhenyu Liang</li>
       <li class="w3-light-grey">
-        <a target="_blank" href="https://forms.gle/vHEtT5xkqkQb21mD8">
+        <a target="_blank" href="https://forms.gle/VkKNYNcusPyyuhqv5">
           <button class="coursebutton">Enroll Now!</button>
         </a>
       </li>
