Updated course details C++

--- a/courses/cplusplusintro.html
+++ b/courses/cplusplusintro.html
@@ -176,18 +176,19 @@
           <h2>Coding</h2>
           <p>Course Description</p>
         </div>
-        <p data-aos="fade-up">This course is a beginner’s guide to C++.
+        <p data-aos="fade-up">This course is a beginner’s guide to C++. This course is a great way to introduce modern society jobs to students with little to none expertise in c++ . With the built in projects in this course, you would be able to start bigger dreams that you always wanted. The flow of this course isn't complicated at all and can fit any one with a busy schedule. With the development of team work exercises, many people would make need friends. 
           <br>
         </p>
         <div class="section-title" data-aos="fade-up" style="margin-top: 10%; margin-bottom: -5%;">
           <h2 style="font-size: 15px;">Who</h2>
         </div>
         <div data-aos="fade-up">
-          <p>Working on the site...</p>
-          <!--<ul>
-            <li>Have Never Used Scratch Before</li>
-            <li>Have Minimal Experience in Scratch</li>
-          </ul>-->
+          <p>Students Ages 9 or Above Who</p>
+          <ul>
+            <li>Have never Programmed Before</li>
+            <li>Have Minimal Experience in Programming</li>
+            <li>Have Minimal Experience in C++</li>
+          </ul>
         </div>
         <div class="section-title" data-aos="fade-up" style="margin-top: 7%; margin-bottom: -5%;">
           <h2 style="font-size: 15px;">Structure</h2>
