--- a/courses/cplusplusintro.html
+++ b/courses/cplusplusintro.html
@@ -159,7 +159,7 @@
             <div class="cell" data-title="Time (EST)">5:00 - 6:00 PM</div>
             <div class="cell" data-title="Lead Teachers">Zhenyu Liang</div>
             <div class="cell" data-title="Register">
-              <a target="_blank" href="https://forms.gle/96Dt64a8VsgBxGws7">
+              <a target="_blank" href="https://forms.gle/VkKNYNcusPyyuhqv5">
                 <button class="coursebutton">Enroll Now!</button>
               </a>
             </div>
