--- a/courses/pythonauto.html
+++ b/courses/pythonauto.html
@@ -256,6 +256,8 @@
         <div class="col-lg-3 col-md-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="/assets/img/profilepic/avinashprofilepic.png" class="img-fluid"
+                alt="Raghav profilepic"></div>
               <div class="member-info">
                 <h4>Avinash Valuveri</h4><span>Asistant Teacher</span>
                 <div class="social">
