--- a/courses/gamedevintro.html
+++ b/courses/gamedevintro.html
@@ -203,7 +203,7 @@
           <li>Project-Based Learning</li>
           <li>Experienced Instructors</li>
           <li>Individually-Tailored Interactive Learning</li>
-          <li>Certificate After Competiion</li>
+          <li>Certificate After Completion</li>
         </ul>
       </div>
 
