--- a/courses/javacomp.html
+++ b/courses/javacomp.html
@@ -210,7 +210,7 @@
           <li>Project-Based Learning</li>
           <li>Experienced Instructors</li>
           <li>Individually-Tailored Interactive Learning</li>
-          <li>Certificate After Competiion</li>
+          <li>Certificate After Completion</li>
         </ul>
       </div>
       <div class="w3-col l5 courseinfo" style="border-radius: 50px;">
