--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
+  <!--<link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">-->
+  <link rel="icon" href="" type="image/png">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google FontS -->
